[package]
name = "bws-rest-proxy"
version = "0.5.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
axum = { version = "0.6.20", features = ["headers"] }
bitwarden = { version = "0.3.0", features = ["secrets"] }
clap = { version = "4.4.6", features = ["derive"] }
futures = "0.3.28"
hyper = { version = "0.14.27", features = ["full"] }
reqwest = { version = "0.11.22", default_features = false, features = [
    "native-tls",
] }
serde = "1.0.188"
serde_json = "1.0.107"
serde_yaml = "0.9.25"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17", features = ["json"] }
tokio = { version = "1.32.0", features = [
    "rt-multi-thread",
    "net",
    "macros",
    "signal",
] }
uuid = "1.4.1"
