[package]
name = "bws-rest-proxy"
version = "0.5.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
axum = { version = "0.7.3", features = [] }
axum-extra = { version = "0.9.1", features = ["typed-header"], default-features = false }
bitwarden = { version = "0.4.0", features = ["secrets"] }
clap = { version = "4.4.13", features = ["derive"] }
futures = "0.3.30"
hyper = { version = "1.1.0", features = ["full"] }
reqwest = { version = "0.11.23", default_features = false, features = [
    "native-tls",
] }
serde = "1.0.195"
serde_json = "1.0.111"
serde_yaml = "0.9.30"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["json"] }
tokio = { version = "1.34.0", features = [
    "rt-multi-thread",
    "net",
    "macros",
    "signal",
] }
uuid = "1.6.1"
