[package]
name = "bws-rest-proxy"
version = "0.5.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
axum = { version = "0.7.4", features = [] }
axum-extra = { version = "0.9.2", features = ["typed-header"], default-features = false }
bitwarden = { version = "0.4.0", features = ["secrets"] }
clap = { version = "4.5.2", features = ["derive"] }
futures = "0.3.30"
hyper = { version = "1.2.0", features = ["full"] }
reqwest = { version = "0.11.24", default_features = false, features = [
    "native-tls",
] }
serde = "1.0.197"
serde_json = "1.0.114"
serde_yaml = "0.9.32"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["json"] }
tokio = { version = "1.36.0", features = [
    "rt-multi-thread",
    "net",
    "macros",
    "signal",
] }
uuid = "1.7.0"
